fix butterfly on mobile

--- a/app/assets/startbootstrap/css/stylish-portfolio.css
+++ b/app/assets/startbootstrap/css/stylish-portfolio.css
@@ -79,7 +79,7 @@ body {
     .butterflygif {
         position: absolute;
         left: -25%;
-        top:-10%;
+        top:-7%;
     }
     .bg-holder {
       width: 100%;
